--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,14 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f4f4f4;
+  background-color: white;
   margin: 0;
 }
 
 .container {
   width: 100%;
   max-width: 350px;
-  background: white;
+  background: #dff5c4;
   padding: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -102,4 +102,23 @@ button:hover {
   margin-top: 5px;
   display: block;
 }
+.logo {
+  width: 90%;
+  max-width: 180px; 
+  height: auto;
+  margin: 0 auto 20px;
+  display: block;
+}
+@media (max-width: 400px) {
+  .logo {
+    width: 60%;
+  }
+}
+.password-note {
+  font-size: 0.8em;
+  color: #555;
+  margin-top: 5px;
+  display: block;
+}
+
 
