alerts are updated

--- a/styles.css
+++ b/styles.css
@@ -128,3 +128,20 @@ button:hover {
   margin-top: 5px;
   display: block;
 }
+.password-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.password-wrapper input {
+  flex: 1;
+  padding-right: 30px;
+}
+
+.eye-icon {
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+  user-select: none;
+}
